src/app.css
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400");

/* ------------------------- THEME ------------------------- */
@import "tailwindcss";
@import "./lib/styles/theme.css";

/* ------------------------- RESPONSIVENESS ------------------------- */
.container {
  margin-inline: auto;
  padding-inline: 2rem;
}

/* 2xl (Widescreen monitors) */
@media (max-width: 1536px) {
  .container {
    max-width: 1280px;
  }
}

/* xl (Modern laptops, desktops) */
@media (max-width: 1280px) {
  .container {
    max-width: 1024px;
  }
}

/* lg (Laptops) */
@media (max-width: 1024px) {
  .container {
    max-width: 768px;
  }
	/* nav {
		position: relative;
	} */
}

/* md (Tablets) */
@media (max-width: 768px) {
  .container,
  footer,
  /* nav, */
  main {
    max-width: 640px;
  }
}

/* sm (Big phones, mini-tablets) */
@media (max-width: 640px) {
  .container,
  footer,
  /* nav, */
  main {
    width: 100%;
  }
}

/* xs (Phones) */
@media (max-width: 475px) {
  .container,
  footer,
  /* nav, */
  main {
    width: 100%;
  }
}


/* ------------------------- BASE ------------------------- */
@layer base {
	html {
		scroll-behavior: smooth;
    scrollbar-gutter: stable;
    overflow-y: scroll !important;
	}

	::-webkit-scrollbar {
		width: 8px;
		height: 3px;
	}
	::-webkit-scrollbar-track {
		background: var(--color-muted);
	}
	::-webkit-scrollbar-thumb {
		background: var(--color-border);
	}
	::-webkit-scrollbar-thumb:hover {
		background: var(--color-input);
	}
	::-webkit-scrollbar-corner {
		background: var(--color-background);
	}

	* {
		@apply border-border;
	}

	body {
		font-family: var(--font-sans);
		background-color: var(--color-background);
		position: relative;
		background-attachment: fixed;
	}

	button,
	a,
	input,
	textarea,
	article,
	span {
		transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, gap;
		transition-duration: 150ms;
		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
	}

	/* ALL OTHER */
	h1 {
		@apply text-2xl md:text-3xl;
		font-family: var(--font-heading);
		color: var(--color-primary);
		text-wrap: balance;
	}

	h2 {
		@apply text-xl md:text-2xl;
		font-family: var(--font-heading);
		color: var(--color-primary);
		text-wrap: balance;
	}

	h3 {
		@apply text-lg;
		font-family: var(--font-heading);
		color: var(--color-primary);
		text-wrap: balance;
	}

	h4 {
		@apply text-base;
		font-family: var(--font-sans);
		color: var(--color-muted-foreground);
	}

	h5 {
		@apply text-base;
		font-family: var(--font-sans);
		color: var(--color-muted-foreground);
	}

	h6 {
		@apply px-4 md:px-0;
		@apply text-sm;
		@apply text-foreground/80;
		letter-spacing: -0.05em;
	}

	p {
		@apply text-base;
		font-family: var(--font-sans);
		color: var(--color-muted-foreground);

		text-wrap: pretty;
	}

	label {
		font-family: var(--font-sans);
		color: var(--color-muted-foreground);
	}

	nav {
		@apply bg-muted/85;
		color: var(--color-muted-foreground);
	}

	main {
		display: flex;
		flex-direction: column;
		gap: 1.5rem;
		@apply mt-12;
		@apply px-2 md:px-0;
		width: 100%;
		max-width: 840px;
	}

	.page {
		display: flex;
		flex-direction: column;
		height: auto;
		border-radius: 0.75rem;
		border: 1px solid var(--color-border);
	}

	.carousel-slide {
		height: 100%;
		overflow: clip;

		& img {
			height: 100%;
			object-fit: cover;
		}
	}

	.section-body {
		display: flex;
		flex-direction: column;
		gap: 0.75rem;
	}

	section {
		background: var(--color-muted);

		@apply px-4;
		@apply py-6;
		flex-grow: 1;
		border-radius: 0.75rem;
	}

	.projects-roles {
		display: flex;
		flex-direction: column;
		gap: 1rem;
	}

	span.jumpable {
		height: 2rem;
		margin-top: -3rem;
		z-index: -50;
	}

	footer {
    @apply text-muted-foreground/40;
		@apply py-4;
		@apply mx-auto;

		& p {
			@apply text-sm tracking-tighter text-center px-4 md:px-0;
		}
	}
}


/* ------------------------- COMPONENTS ------------------------- */
.hoverable-link {
	text-decoration-line: underline;
	text-underline-offset: 1px;

	span&:hover {
		color: var(--color-tertiary);
	}

	a&:hover {
		color: var(--color-secondary);
	}
}

h1.hero-text {
	color: var(--color-foreground);

	font-weight: 700;
	letter-spacing: 0.025rem;
}

h6.footnote {
  @apply text-muted-foreground/35;
  text-align: right;
  @apply text-sm;

	& > a {
		text-decoration-line: underline;

		&:hover {
			color: var(--color-secondary);
		}
	}
}

.non-link-highlight {
	font-weight: 500;
	color: var(--color-foreground);

	&:hover {
		color: var(--color-tertiary);
	}
}


/* ------------------------- UTILITIES ------------------------- */
@utility magic-text {
	animation: background-pan 6s linear infinite;
	background: linear-gradient(
		to right,
		var(--color-foreground),
		var(--color-secondary),
		var(--color-tertiary),
		var(--color-foreground)
	);
	background-size: 200%;
	background-clip: text;
	-webkit-text-fill-color: transparent;
	white-space: normal;
}


/* ------------------------- OTHER ------------------------- */
@keyframes background-pan {
	from {
		background-position: 0% center;
	}

	to {
		background-position: 200% center;
	}
}


@keyframes animate-grain {
	0%,
	100% {
		transform: translate(0, 0);
	}

	10% {
		transform: translate(-5%, -10%);
	}

	20% {
		transform: translate(-15%, -20%);
	}

	30% {
		transform: translate(-5%, -10%);
	}

	40% {
		transform: translate(-15%, -20%);
	}

	50% {
		transform: translate(-5%, -10%);
	}

	60% {
		transform: translate(-15%, -20%);
	}

	70% {
		transform: translate(-5%, -10%);
	}

	80% {
		transform: translate(-15%, -20%);
	}

	90% {
		transform: translate(-5%, -10%);
	}

	/* stylelint-disable-next-line keyframe-block-no-duplicate-selectors */
	100% {
		transform: translate(-15%, -20%);
	}
}

